--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         }
     </style>
 
-    
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BELMO & TARIQ | اتحاد الذكاء الاصطناعي والتصميم الجرافيكي</title>
@@ -1239,7 +1240,7 @@ const createDigitalExperience = (ai, design) => {
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-phone"></i>
-                            <span>+962 77655 3217</span>
+                            <span>+962776553217</span>
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-map-marker-alt"></i>
@@ -1265,7 +1266,7 @@ const createDigitalExperience = (ai, design) => {
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-phone"></i>
-                            <span>+962 77992 0031</span>
+                            <span>+962779920031</span>
                         </div>
                         <div class="contact-detail">
                             <i class="fas fa-map-marker-alt"></i>
@@ -1427,5 +1428,4 @@ const createDigitalExperience = (ai, design) => {
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
